# zero2prod

./: Cargo.toml  Dockerfile  configuration.yaml
conf/: local.yaml  production.yaml
http_test/: zero.http
migrations/: 01_create_subscriptions_table.sql  02_create_subscription_token_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
